Update Page 3 Locations.html

--- a/Page 3 Locations.html
+++ b/Page 3 Locations.html
@@ -1,6 +1,6 @@
 <html>
 <h1> <center> <b> Locations and Contact Details</b></center></h1>
-<head>
+<head>Locations and Contact Us
 </head>
 <body>
 <main>
