Update Page 2 About Us.html

--- a/Page 2 About Us.html
+++ b/Page 2 About Us.html
@@ -1,7 +1,7 @@
 <html>
 <h1> <center> <b> About Us</b></center></h1>
 <body>
-
+ <head> About Us</head>
 
 <main>
 <nav style="float:left; height:100%; width:200px;position:fixed; border-right:2px solid black ;">
