--- a/page 1 Menu Card.html
+++ b/page 1 Menu Card.html
@@ -1,6 +1,7 @@
 <html>
 <h1> <center> <b> Menu Card</b></center></h1>
 <body>
+  <head> Menu Card</head>
 <main>
 <nav style="float:left; height:100%; width:200px;position:fixed; border-right:2px solid black ;">
 <ul style="list-style:none; background-color:#AD75E4;font-family:Helvetica;">
