Update page 4 Order Online.html

--- a/page 4 Order Online.html
+++ b/page 4 Order Online.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1> <center> <b> Order Online</b></center></h1>
-
+  <head>Order Online</head>
 <main>
 <nav style="float:left; height:100%; width:200px;position:fixed; border-right:2px solid black ;">
 <ul style="list-style:none; background-color:#AD75E4; font-family:Helvetica;">
