Update and rename Page 3 Locations.html to page3.html

--- a/page3.html
+++ b/page3.html
@@ -7,16 +7,18 @@
 <nav style="float:left; height:100%; width:200px;position:fixed; border-right:2px solid black ;">
 <ul style="list-style:none; background-color:#AD75E4;font-family:Helvetica;">
 <br>
-<li><a href="page 1 Menu Card.html">Menu Card</a> </li>
+<li><a href="page1.html">Menu Card</a> </li>
 <br><br><br><br>
-<li><a href="page 2 About Us.html">About Us</a></li>
+<li><a href="page2.html">About Us</a></li>
 <br><br><br><br>
-<li><a href="page 3 Locations.html">Locations</a></li>
+<li><a href="page3.html">Locations</a></li>
 <br><br><br><br>
 
-<li><a href="page 3 Locations.html">Contact Us</a></LI>
+<li><a href="page3.html">Contact Us</a></LI>
 <br><br><br>
-<li><a href="page 4 Order Online.html">Order Online</a></li>
+<li><a href="page4.html">Order Online</a></li>
+<br><br><br>
+<li><a href="index.html">Back To Home Page</a></li>
 <br><br><br>
 <li><a href="index.html">Back To Home Page</a></li>
 <br><br><br>
